force-app/main/default/objects/Group_Booking__c/Group_Booking__c.object-meta.xml
<CustomObject>
    <description>Tourism (B2T) Object :: Used for recording MICE group bookings</description>
    <label>Booking/Partnership</label>
    <nameField>
        <displayFormat>GBI{0000000000}</displayFormat>
        <label>Group Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings/Partnerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>