force-app/main/default/objects/Group_Booking__c/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <inlineHelpText>Enter the actual revenue brought into the village from this booking</inlineHelpText>
    <label>Actual Revenue</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>