force-app/main/default/objects/Group_Booking__c/fields/Actual_Revenue_Per_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Per_Visitor__c</fullName>
    <formula>Actual_Revenue__c /  Number_of_Visitors__c</formula>
    <label>Actual Revenue Per Visitor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>