force-app/main/default/objects/Group_Booking__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <inlineHelpText>Please enter the date the group will be arriving in the village</inlineHelpText>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>