force-app/main/default/objects/Group_Booking__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <description>The Time part of the Expected Arrival</description>
    <formula>MID(TEXT( Expected_Arrival__c - $User.UserTimezoneOffset__c ), 12, 2 )
 &amp; 
 &quot;:&quot;
 &amp; 
 MID( TEXT( Expected_Arrival__c - $User.UserTimezoneOffset__c ), 15, 2 )
 &amp; 
 &quot;:&quot;
 &amp; 
 MID( TEXT( Expected_Arrival__c - $User.UserTimezoneOffset__c ), 18, 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Time part of the Expected Arrival</inlineHelpText>
    <label>Arrival Time</label>
    <type>Text</type>
</CustomField>