force-app/main/default/objects/Group_Booking__c/fields/Boutique_Private_Viewing__c.field-meta.xml
<CustomField>
    <fullName>Boutique_Private_Viewing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boutique Private Viewing</label>
    <type>Checkbox</type>
</CustomField>