force-app/main/default/objects/Group_Booking__c/fields/Coach_Tour_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Coach_Tour_Company_Name__c</fullName>
    <description>MICE web-2-lead capture field</description>
    <label>Coach Tour Company Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>