force-app/main/default/objects/Group_Booking__c/fields/Coach_Tour_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Coach_Tour_Contact_Email__c</fullName>
    <label>Coach Tour Contact Email</label>
    <type>Email</type>
</CustomField>