force-app/main/default/objects/Group_Booking__c/fields/Coach_Tour_Phone__c.field-meta.xml
<CustomField>
    <fullName>Coach_Tour_Phone__c</fullName>
    <label>Coach Tour Phone</label>
    <type>Phone</type>
</CustomField>