force-app/main/default/objects/Group_Booking__c/fields/Confirmation_Email_Resent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Resent__c</fullName>
    <label>Confirmation Email Resent</label>
    <type>DateTime</type>
</CustomField>