force-app/main/default/objects/Group_Booking__c/fields/Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Sent__c</fullName>
    <inlineHelpText>Tags if, and when, the a confirmation email was sent to the Group Contact</inlineHelpText>
    <label>Confirmation Email Sent</label>
    <type>DateTime</type>
</CustomField>