force-app/main/default/objects/Group_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the primary contact at the organising party</inlineHelpText>
    <label>Booking/Partnership Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tourism Contact</value>
        </filterItems>
        <infoMessage>Please Select a Tourism Contact</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Group_Booking_Information_del1</relationshipName>
    <type>Lookup</type>
</CustomField>