force-app/main/default/objects/Group_Booking__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <inlineHelpText>Enter a contact number for the Tour Leader or Driver whichever has been entered</inlineHelpText>
    <label>Contact Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>