force-app/main/default/objects/Group_Booking__c/fields/Cost_to_Village__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Village__c</fullName>
    <label>Cost to Village</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>