force-app/main/default/objects/Group_Booking__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <inlineHelpText>Please enter the groups departure date from the village</inlineHelpText>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>