force-app/main/default/objects/Group_Booking__c/fields/Estimated_Revenue_Per_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue_Per_Visitor__c</fullName>
    <formula>Visitor_Estimated_Revenue_Lookup__r.Revenue_per_Visitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Revenue Per Visitor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>