force-app/main/default/objects/Group_Booking__c/fields/Estimated_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Revenue__c</fullName>
    <formula>Number_of_Visitors_Expected__c  *  Visitor_Estimated_Revenue_Lookup__r.Revenue_per_Visitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated Field based on Group Source x visitors</inlineHelpText>
    <label>Estimated Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>