force-app/main/default/objects/Group_Booking__c/fields/Expected_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival__c</fullName>
    <inlineHelpText>Enter the expected date and time</inlineHelpText>
    <label>Expected Arrival</label>
    <type>DateTime</type>
</CustomField>