force-app/main/default/objects/Group_Booking__c/fields/Expected_Departure__c.field-meta.xml
<CustomField>
    <fullName>Expected_Departure__c</fullName>
    <inlineHelpText>Enter the expected departure date and time for the booking</inlineHelpText>
    <label>Expected Departure</label>
    <type>DateTime</type>
</CustomField>