force-app/main/default/objects/Group_Booking__c/fields/Expected_Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Expected_Mode_of_Transport__c</fullName>
    <label>Expected Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Large Coach</fullName>
            </value>
            <value>
                <fullName>Small Coach</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Private Hire</fullName>
            </value>
            <value>
                <fullName>Public Bus</fullName>
            </value>
            <value>
                <fullName>Shopping Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>