force-app/main/default/objects/Group_Booking__c/fields/Expected_number_of_visits_per_day__c.field-meta.xml
<CustomField>
    <fullName>Expected_number_of_visits_per_day__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Do you expect multiple coaches to show each day</inlineHelpText>
    <label>Expected number of visits per day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>