force-app/main/default/objects/Group_Booking__c/fields/Food_Beverage__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether the group will require refreshments</inlineHelpText>
    <label>Food &amp; Beverage?</label>
    <type>Checkbox</type>
</CustomField>