force-app/main/default/objects/Group_Booking__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether the group will be expecting some sort of gift</inlineHelpText>
    <label>Gift?</label>
    <type>Checkbox</type>
</CustomField>