force-app/main/default/objects/Group_Booking__c/fields/Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether the group will be expecting to receive gift cards</inlineHelpText>
    <label>Gift Card?</label>
    <type>Checkbox</type>
</CustomField>