force-app/main/default/objects/Group_Booking__c/fields/Group_Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Source__c</fullName>
    <description>How did the booking get into the system --&gt; Mapped from Lead.Lead_Source__c</description>
    <label>Group Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Front End</fullName>
                <default>true</default>
                <label>Salesforce Front End</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>