force-app/main/default/objects/Group_Booking__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <inlineHelpText>Please enter the group type</inlineHelpText>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>