force-app/main/default/objects/Group_Booking__c/fields/Inbound_Coach_Operator__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Coach_Operator__c</fullName>
    <inlineHelpText>Enter the name of the inbound coach operator</inlineHelpText>
    <label>Inbound Coach Operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>