force-app/main/default/objects/Group_Booking__c/fields/Is_My_Village_GB__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Village_GB__c</fullName>
    <formula>Village__r.Name = TEXT($User.Village__c)</formula>
    <label>Is My Village GB</label>
    <type>Checkbox</type>
</CustomField>