force-app/main/default/objects/Group_Booking__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Activity</label>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipName>Group_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>