force-app/main/default/objects/Group_Booking__c/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <inlineHelpText>Select the mode of transport this group will use to get to the village</inlineHelpText>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transport_Required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Limo</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>