force-app/main/default/objects/Group_Booking__c/fields/My_Village_Booking_Partnership__c.field-meta.xml
<CustomField>
    <fullName>My_Village_Booking_Partnership__c</fullName>
    <formula>IF( TEXT($User.Village__c) =  Village__r.Name , true,  false )</formula>
    <label>My Village Booking/Partnership</label>
    <type>Checkbox</type>
</CustomField>