force-app/main/default/objects/Group_Booking__c/fields/Name_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Event__c</fullName>
    <inlineHelpText>Please enter the name of the event (If appropriate)</inlineHelpText>
    <label>Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>