force-app/main/default/objects/Group_Booking__c/fields/No_Show_Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Email_Send_Date__c</fullName>
    <description>Shows the date-time that the No-Show email was sent</description>
    <inlineHelpText>Shows the date-time that the No-Show email was sent</inlineHelpText>
    <label>No Show Email Send Date</label>
    <type>DateTime</type>
</CustomField>