force-app/main/default/objects/Group_Booking__c/fields/Notes_and_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Additional_Comments__c</fullName>
    <inlineHelpText>Enter any additional notes or comments relevant for this booking</inlineHelpText>
    <label>Notes and Additional Comments</label>
    <type>TextArea</type>
</CustomField>