force-app/main/default/objects/Group_Booking__c/fields/Number_of_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visitors__c</fullName>
    <inlineHelpText>Please enter the number of visitors in the group</inlineHelpText>
    <label>Number of Visitors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>