force-app/main/default/objects/Group_Booking__c/fields/Number_of_Visitors_Expected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visitors_Expected__c</fullName>
    <description>Maps from lead, the number of visitors</description>
    <inlineHelpText>Per Arrival (Visit)</inlineHelpText>
    <label>Number of Visitors Expected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>