force-app/main/default/objects/Group_Booking__c/fields/Old_Redemption_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Redemption_Campaign_ID__c</fullName>
    <inlineHelpText>If the Booking/Partnership was migrated over from an old campaign record, enter the ID here (starts with 701...)</inlineHelpText>
    <label>Old Redemption Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>