force-app/main/default/objects/Group_Booking__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the name of the company or agency responsible for organising this event</inlineHelpText>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Please select a Tourism or Marketing Partner.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Tourism</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Marketing_Partner</value>
        </filterItems>
        <infoMessage>Please select a Tourism or Marketing Partner.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings/Partnerships</relationshipLabel>
    <relationshipName>Group_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>