force-app/main/default/objects/Group_Booking__c/fields/Originating_Lead__c.field-meta.xml
<CustomField>
    <fullName>Originating_Lead__c</fullName>
    <label>Originating Lead</label>
    <type>Url</type>
</CustomField>