force-app/main/default/objects/Group_Booking__c/fields/Passengers_Expected__c.field-meta.xml
<CustomField>
    <fullName>Passengers_Expected__c</fullName>
    <inlineHelpText>Enter the number of passengers expected on this booking</inlineHelpText>
    <label>Passengers Expected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>