force-app/main/default/objects/Group_Booking__c/fields/Primary_Contacts_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contacts_Secondary_Email__c</fullName>
    <label>Primary Contacts Secondary Email</label>
    <type>Email</type>
</CustomField>