force-app/main/default/objects/Group_Booking__c/fields/Reporting_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Arrival_Date__c</fullName>
    <description>outputs the ACTUAL date for Completed events, and EXPECTED date for everything else</description>
    <formula>IF(  ISPICKVAL(Status__c, &quot;Completed&quot;)  ,   Arrival_Date__c ,   DATEVALUE(Expected_Arrival__c) )</formula>
    <label>Reporting Arrival Date</label>
    <type>Date</type>
</CustomField>