force-app/main/default/objects/Group_Booking__c/fields/Reporting_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Revenue__c</fullName>
    <description>Reports a different revenue figure depending on if the status of the Booking</description>
    <formula>IF(  ISPICKVAL(Status__c, &quot;Completed&quot;)  ,  Actual_Revenue__c , 

IF(   OR(ISPICKVAL(Status__c, &quot;Proposed&quot;),ISPICKVAL(Status__c, &quot;Confirmed&quot;))    ,   Estimated_Total_Revenue__c , 

0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>