force-app/main/default/objects/Group_Booking__c/fields/Reporting_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Visitors__c</fullName>
    <description>returns ACTUAL number of Visitors for COMPLETED bookings, and EXPECTED number of visitors for everything else</description>
    <formula>IF( ISPICKVAL(Status__c, &quot;Completed&quot;) , Number_of_Visitors__c , 

IF( OR(ISPICKVAL(Status__c, &quot;Proposed&quot;),ISPICKVAL(Status__c, &quot;Confirmed&quot;)) , Number_of_Visitors_Expected__c , 

0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>