force-app/main/default/objects/Group_Booking__c/fields/Requested_Check_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Requested_Check_In_Location__c</fullName>
    <label>Requested Check-In Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIC</fullName>
            </value>
            <value>
                <fullName>Train Station</fullName>
            </value>
            <value>
                <fullName>Coach Pod</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>