force-app/main/default/objects/Group_Booking__c/fields/Revenue_Difference__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Difference__c</fullName>
    <description>The revenue difference between actual and estimated.</description>
    <formula>Actual_Revenue__c -  Estimated_Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Difference €</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>