force-app/main/default/objects/Group_Booking__c/fields/Revenue_percent_Collected__c.field-meta.xml
<CustomField>
    <fullName>Revenue_percent_Collected__c</fullName>
    <description>Revenue difference between actual and estimated - in %</description>
    <formula>Actual_Revenue__c  / Estimated_Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue % Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>