force-app/main/default/objects/Group_Booking__c/fields/Same_Day_Booking__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Booking__c</fullName>
    <description>Indicates that a booking was made to arrive on the same day</description>
    <formula>(DATEVALUE( CreatedDate ) == DATEVALUE(Expected_Arrival__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that a booking was made to arrive on the same day</inlineHelpText>
    <label>Same Day Booking</label>
    <type>Checkbox</type>
</CustomField>