force-app/main/default/objects/Group_Booking__c/fields/Schedule_AM__c.field-meta.xml
<CustomField>
    <fullName>Schedule_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM</label>
    <type>Checkbox</type>
</CustomField>