force-app/main/default/objects/Group_Booking__c/fields/Schedule_Friday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>