force-app/main/default/objects/Group_Booking__c/fields/Schedule_Monday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>