force-app/main/default/objects/Group_Booking__c/fields/Schedule_PM__c.field-meta.xml
<CustomField>
    <fullName>Schedule_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM</label>
    <type>Checkbox</type>
</CustomField>