force-app/main/default/objects/Group_Booking__c/fields/Schedule_Saturday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>