force-app/main/default/objects/Group_Booking__c/fields/Schedule_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>