force-app/main/default/objects/Group_Booking__c/fields/Schedule_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>