force-app/main/default/objects/Group_Booking__c/fields/Schedule_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>