force-app/main/default/objects/Group_Booking__c/fields/Schedule_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>