force-app/main/default/objects/Group_Booking__c/fields/Search_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Search_Keywords__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>populated by workflow - stamps the partner name, casesafe(id)</description>
    <label>Search Keywords</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>