force-app/main/default/objects/Group_Booking__c/fields/Secondary_MICE_Contact_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_Address_3__c</fullName>
    <label>Secondary Contact Address 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>