force-app/main/default/objects/Group_Booking__c/fields/Secondary_MICE_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_Email__c</fullName>
    <label>Secondary Contact Email</label>
    <type>Email</type>
</CustomField>