force-app/main/default/objects/Group_Booking__c/fields/Secondary_MICE_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_First_Name__c</fullName>
    <label>Secondary Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>