force-app/main/default/objects/Group_Booking__c/fields/Secondary_MICE_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_Phone__c</fullName>
    <label>Secondary Contact Phone</label>
    <type>Phone</type>
</CustomField>