force-app/main/default/objects/Group_Booking__c/fields/Secondary_MICE_Contact_ZIP_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_ZIP_Postcode__c</fullName>
    <label>Secondary Contact ZIP/Postcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>